<?xml version="1.0" encoding="utf-8"?>

<ViewSwitcher xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_switcher"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff6090">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


        <TextView
            android:id="@+id/quiz_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:text="@string/quiz_header"
            android:textSize="70sp" />

        <TextView
            android:id="@+id/welcome_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/quiz_header"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/welcome"
            android:textAppearance="?android:textAppearanceMedium" />

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcome_message"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:height="1dp"
            android:backgroundTint="@android:color/white"
            android:hint="@string/name_hint"
            android:inputType="textCapWords"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:backgroundTint="#b6e3ff"
            android:text="@string/next_button"
            android:textColor="@android:color/black" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ff6090"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/description_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textAppearance="?android:textAppearanceLarge" />


        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:backgroundTint="#b6e3ff"
            android:text="@string/back"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/start_quiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#b6e3ff"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/start_quiz"
            android:textColor="@android:color/black"/>
    </RelativeLayout>
</ViewSwitcher>